--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
+
+    <nav class="containerNav">
+        <div class="navMenu"></div>
+        <div class="menuLogo">
+            <p>logo</p>
+        </div>
+        <div class="menuInicio">
+            <a class="btnMenu" href="">Inicio</a>
+        </div>
+        <div class="menuLacteos">
+            <a class="btnMenu" href="">Lacteos</a>
+        </div>
+        <div class="menuCarnicos">
+            <a class="btnMenu" href="">Carnicos</a>
+        </div>
+        <div class="manuPanaderia">
+            <a class="btnMenu" href="">Panaderia</a>
+        </div>
+        <div class="menuOtros">
+            <a class="btnMenu" href="">Otros</a>
+        </div>
+    </nav>
    <section class="banner">
         <div class="bannerTexts">
             <h1>Online Store</h1>
