--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-
+   <!-- HEADER -->
     <nav class="containerNav">
         <div class="navMenu"></div>
         <div class="menuLogo">
-            <p>logo</p>
+        <img class="logoImg" src="/assets/img/logo.png" alt="">
         </div>
         <div class="menuInicio">
             <a class="btnMenu" href="">Inicio</a>
@@ -29,31 +29,70 @@
             <a class="btnMenu" href="">Otros</a>
         </div>
     </nav>
+   <!-- BANNER -->
    <section class="banner">
         <div class="bannerTexts">
             <h1>Online Store</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ullam cupiditate laudantium vel nulla, odio ipsam praesentium dolores ex labore nemo, quisquam sapiente recusandae repudiandae possimus. Dolorem perferendis vitae quas!</p>
         </div>    
    </section>
-   <section class="containerLacteos">
+   <!-- SECCIÓN LACTEOS -->
+   <section>
+    <div class="titleProducts">
         <h2>LACTEOS</h2>
-            <div class="Milk"></div>
-            <div class="milkDerivatives">
-                <div class="Yogurt"></div>
-                <div class="Kumis"></div>
-                <div class="Queso"></div>
-                <div class="Suero"></div>
+    </div>
+    <div class="containerLacteos">
+        <div class="Milk"></div>
+        <div class="milkDerivatives">
+            <div class="yogurt">
+                <img class="lacteosImg" src="/assets/img/1434575166114.jpeg" alt="">
+                <div class="yogurtIn">
+                    <h3>YOGURT</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                </div>
             </div>
+            <div class="lacteosImg" class="kumis">
+                <img src="/assets/img/1434575166114.jpeg" alt="">
+                <div class="kumisIn">
+                    <h3>KUMIS</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                </div>
+            </div>
+            <div class="lacteosImg" class="queso">
+                <img src="/assets/img/1434575166114.jpeg" alt="">
+                <div class="quesoIn">
+                    <h3>QUESO</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver.</p>
+                </div>
+            </div>
+            <div class="lacteosImg" class="suero">
+                <img src="/assets/img/1434575166114.jpeg" alt="">
+                <div class="sueroIn">
+                    <h3>SUERO</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </section>
-    <section class="containerCarnicos">
+<!-- SECCIÓN CARNICOS -->
+    <section>
+    <div class="titleProducts">
         <h2>CARNICOS</h2>
+    </div>
+    <div class="containerCarnicos">
         <div class="Butifarra"></div>
         <div class="Chorizo"></div>
         <div class="Salchichon"></div>
         <div class="Salchicha"></div>
+    </div>
     </section>
-    <section class="containerPanaderia">
+<!-- SECCIÓN PANADERIA -->
+    <section>
+    <div class="titleProducts">
         <h2>PANADERIA</h2>
+    </div>
+    <div class="containerPanaderia">
         <div class="variosPanaderia">
             <div class="panMantequilla"></div>
             <div class="panQueso"></div>
@@ -63,12 +102,20 @@
             <div class="kequi"></div>
         </div>
         <div class="torta"></div>
+    </div>
     </section>
-    <section class="containerOtroProductos">
-        <h2>OTROS PRODUCTOS</h2>
-        <div class="pescados"></div>
-        <div class="aves"></div>
-        <div class="cerdos"></div>
+<!-- SECCIÓN OTROS PRODUCTOS -->
+    <section>
+        <div class="titleProducts">
+            <h2>OTROS PRODUCTOS</h2>
+        </div>
+        <div class="containerOtroProductos">
+            <div class="pescados"></div>
+            <div class="aves"></div>
+            <div class="cerdos"></div>
+        </div>
     </section>
+
 </body>
 </html>
+
