--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Document</title>
+    <title>shop Online</title>
 </head>
 <body>
    <!-- HEADER -->
@@ -17,105 +17,213 @@
             <a class="btnMenu" href="">Inicio</a>
         </div>
         <div class="menuLacteos">
-            <a class="btnMenu" href="">Lacteos</a>
+            <a class="btnMenu" href="#lacteos">Lacteos</a>
         </div>
         <div class="menuCarnicos">
-            <a class="btnMenu" href="">Carnicos</a>
+            <a class="btnMenu" href="#carnicos">Carnicos</a>
         </div>
         <div class="manuPanaderia">
-            <a class="btnMenu" href="">Panaderia</a>
+            <a class="btnMenu" href="#panaderia">Panaderia</a>
         </div>
         <div class="menuOtros">
-            <a class="btnMenu" href="">Otros</a>
+            <a class="btnMenu" href="#otros">Otros</a>
         </div>
     </nav>
    <!-- BANNER -->
    <section class="banner">
         <div class="bannerTexts">
-            <h1>Online Store</h1>
+            <h1>Shop Online</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ullam cupiditate laudantium vel nulla, odio ipsam praesentium dolores ex labore nemo, quisquam sapiente recusandae repudiandae possimus. Dolorem perferendis vitae quas!</p>
         </div>    
    </section>
    <!-- SECCIÓN LACTEOS -->
-   <section>
-    <div class="titleProducts">
-        <h2>LACTEOS</h2>
-    </div>
-    <div class="containerLacteos">
-        <div class="Milk"></div>
-        <div class="milkDerivatives">
-            <div class="yogurt">
-                <img class="lacteosImg" src="/assets/img/1434575166114.jpeg" alt="">
-                <div class="yogurtIn">
-                    <h3>YOGURT</h3>
-                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+   <section id="lacteos">
+        <div class="titleProducts">
+            <h2>LACTEOS</h2>
+        </div>
+        <div class="containerLacteos">
+            <div class="Milk">
+                <img class="milkImg" src="/assets/img/leche.jpg" alt="">
+                <div class="milkIn">
+                    <h3>LECHE</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio facilis quam adipisci maiores dolor ex earum vero cupiditate recusandae eos eum, id sapiente doloremque, nemo est quisquam ipsum necessitatibus consequatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quaerat non, corporis saepe, cupiditate asperiores, quisquam itaque illum dolorum nesciunt dolorem illo. Ad atque praesentium mollitia fugiat possimus cupiditate accusamus!</p>
+                    <a class="btnItems" href="">Comprar</a>
                 </div>
             </div>
-            <div class="lacteosImg" class="kumis">
-                <img src="/assets/img/1434575166114.jpeg" alt="">
-                <div class="kumisIn">
-                    <h3>KUMIS</h3>
-                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+            <div class="milkDerivatives">
+                <div class="yogurt">
+                    <img class="lacteosImg" src="/assets/img/yogurt.jpg" alt="">
+                    <div class="yogurtIn">
+                        <h3>YOGURT</h3>
+                        <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                        <a class="btnItems" href="">Comprar</a>
+                    </div>
                 </div>
-            </div>
-            <div class="lacteosImg" class="queso">
-                <img src="/assets/img/1434575166114.jpeg" alt="">
-                <div class="quesoIn">
-                    <h3>QUESO</h3>
-                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver.</p>
+                <div class="kumis">
+                    <img class="lacteosImg" src="/assets/img/kummis.jpg" alt="">
+                    <div class="kumisIn">
+                        <h3>KUMMIS</h3>
+                        <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                        <a class="btnItems" href="">Comprar</a>
+                    </div>
                 </div>
-            </div>
-            <div class="lacteosImg" class="suero">
-                <img src="/assets/img/1434575166114.jpeg" alt="">
-                <div class="sueroIn">
-                    <h3>SUERO</h3>
-                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                <div class="queso">
+                    <img class="lacteosImg" src="/assets/img/queso.jpg" alt="">
+                    <div class="quesoIn">
+                        <h3>QUESO</h3>
+                        <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver.</p>
+                        <a class="btnItems" href="">Comprar</a>
+                    </div>
+                </div>
+                <div class="suero">
+                    <img class="lacteosImg" src="/assets/img/suero.jpg" alt="">
+                    <div class="sueroIn">
+                        <h3>SUERO</h3>
+                        <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                        <a class="btnItems" href="">Comprar</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </section>
 <!-- SECCIÓN CARNICOS -->
-    <section>
+    <section id="carnicos">
     <div class="titleProducts">
         <h2>CARNICOS</h2>
     </div>
     <div class="containerCarnicos">
-        <div class="Butifarra"></div>
-        <div class="Chorizo"></div>
-        <div class="Salchichon"></div>
-        <div class="Salchicha"></div>
+        <div class="Butifarra">
+            <img class="lacteosImg" src="/assets/img/butifarra.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>BUTIFARRA</h3>
+                <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+        </div>
+        <div class="Chorizo">
+            <img class="lacteosImg" src="/assets/img/chorizo.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>CHORIZO</h3>
+                <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+        </div>
+        <div class="Salchichon">
+            <img class="lacteosImg" src="/assets/img/salchicha.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>SALCHICHA</h3>
+                <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+        </div>
+        <div class="Salchicha">
+            <img class="lacteosImg" src="/assets/img/salchichon.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>SALCHICHÓN</h3>
+                <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+        </div>
     </div>
     </section>
 <!-- SECCIÓN PANADERIA -->
-    <section>
+    <section id="panaderia">
     <div class="titleProducts">
         <h2>PANADERIA</h2>
     </div>
     <div class="containerPanaderia">
         <div class="variosPanaderia">
-            <div class="panMantequilla"></div>
-            <div class="panQueso"></div>
-            <div class="panPinita"></div>
-            <div class="galleta"></div>
-            <div class="cupcake"></div>
-            <div class="kequi"></div>
+            <div class="panMantequilla">
+                <img class="panaderiaImg" src="/assets/img/pan-mantequilla.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>PAN MANTEQUILLA</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
+            <div class="panQueso">
+                <img class="panaderiaImg" src="/assets/img/pan-queso.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>PAN DE QUESO</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
+            <div class="panPinita">
+                <img class="panaderiaImg" src="/assets/img/pan-pinita.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>PAN PIÑITA</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
+            <div class="galleta">
+                <img class="panaderiaImg" src="/assets/img/galletas.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>GALLETAS</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
+            <div class="cupcake">
+                <img class="panaderiaImg" src="/assets/img/cupcakes.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>CUPCAKES</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
+            <div class="kequi">
+                <img class="panaderiaImg" src="/assets/img/kequi.jpg" alt="">
+                <div class="carnicosIn">
+                    <h3>KEQUI</h3>
+                    <p>Lorem, ipsum dolor sit amet cons adip elit. Tenetur cum pos fac dolo conseq dign fugit quaerat officia, quod ver</p>
+                    <a class="btnItems" href="">Comprar</a>
+                </div>
+            </div>
         </div>
-        <div class="torta"></div>
+        <div class="torta">
+            <img class="tortaImg" src="/assets/img/torta.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>TORTA</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam perferendis tempora saepe modi in ducimus obcaecati sit, consectetur impedit necessitatibus repudiandae et quia quas, consequuntur cumque velit nobis amet exercitationem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsa tempore omnis et cum eius alias numquam doloremque temporibus adipisci aliquid ex iste veritatis vero beatae sequi reiciendis inventore molestias!</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+        </div>
     </div>
     </section>
 <!-- SECCIÓN OTROS PRODUCTOS -->
-    <section>
+    <section id="otros">
         <div class="titleProducts">
             <h2>OTROS PRODUCTOS</h2>
         </div>
         <div class="containerOtroProductos">
-            <div class="pescados"></div>
-            <div class="aves"></div>
-            <div class="cerdos"></div>
+            <div class="pescados">
+                <img class="tortaImg" src="/assets/img/pescados.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>PESCADOS</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ex praesentium reprehenderit saepe perferendis alias autem eos maxime numquam laudantium odit necessitatibus, nihil incidunt enim recusandae fugit rem est dignissimos!.</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+            </div>
+            <div class="aves">
+                <img class="tortaImg" src="/assets/img/aves.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>AVES</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita facilis odio amet, cumque nihil, voluptatibus dolor consequatur magni placeat porro laborum ratione saepe, aliquid est animi dolorum at quis quas.</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+            </div>
+            <div class="cerdos">
+                <img class="tortaImg" src="/assets/img/cerdos.jpg" alt="">
+            <div class="carnicosIn">
+                <h3>CERDOS</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis error eligendi impedit obcaecati deleniti possimus reprehenderit debitis exercitationem sunt, id blanditiis magnam sint aut? Incidunt a atque voluptates numquam?</p>
+                <a class="btnItems" href="">Comprar</a>
+            </div>
+            </div>
         </div>
     </section>
-
 </body>
 </html>
 
